common/src/main/java/com/example/common/error/Error.kt
package com.example.common.error

data class Error(val errorCode: Int, val errorMessage: String?)